--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.24.1",
+    "@discordjs/rest": "^2.0.1",
     "@prisma/client": "^5.1.1",
     "@t3-oss/env-nextjs": "^0.6.0",
     "@tanstack/react-query": "^4.32.6",
@@ -19,6 +20,9 @@
     "@trpc/next": "^10.37.1",
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
+    "@types/cors": "^2.8.14",
+    "cors": "^2.8.5",
+    "discord-api-types": "^0.37.58",
     "next": "^13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
