--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
     "@clerk/nextjs": "^4.24.1",
     "@discordjs/rest": "^2.0.1",
     "@prisma/client": "^5.1.1",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@t3-oss/env-nextjs": "^0.6.0",
     "@tanstack/react-query": "^4.32.6",
     "@trpc/client": "^10.37.1",
@@ -21,13 +28,19 @@
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
     "@types/cors": "^2.8.14",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "cors": "^2.8.5",
     "discord-api-types": "^0.37.58",
+    "lucide-react": "^0.287.0",
     "next": "^13.4.19",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.2",
     "superjson": "^1.13.1",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.21.4"
   },
   "devDependencies": {
